# ptt-font-tool

./: .gitignore  .release-please-config.json  CHANGELOG.md  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: desktop-mvp.md  fallback-glyphs.md  packaging.md
scripts/: build_desktop_release.py  ptt_font_desktop_entry.py
src/ptt_font_tool/: __init__.py  _qt_desktop.py  audit.py  cli.py  desktop_app.py  desktop_model.py  fallback.py  font_stack.py  noto_cache.py  patch.py  profile.py  release_packaging.py  update_check.py
src/ptt_font_tool/assets/app_icon/: ptt-font-tool.icns
tests/: test_audit.py  test_cli.py  test_desktop_app.py  test_desktop_model.py  test_fallback.py  test_font_stack.py  test_noto_cache.py  test_patch.py  test_profile.py  test_release_packaging.py  test_update_check.py
