[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ptt-font-tool"
version = "0.2.0"
description = "Desktop, CLI, and library tools for adapting fonts to term.ptt.cc terminal cell metrics."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "VdustR" },
]
dependencies = [
  "Brotli>=1.1",
  "fonttools>=4.58",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.7",
]

[project.scripts]
ptt-font = "ptt_font_tool.cli:main"
ptt-font-desktop = "ptt_font_tool.desktop_app:main"

[project.urls]
Homepage = "https://github.com/VdustR/ptt-font-tool"
Repository = "https://github.com/VdustR/ptt-font-tool"
Issues = "https://github.com/VdustR/ptt-font-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]
